---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid operator
  |
1 | 3 + 7
  |   ^ found `+`
  |
help: you should use an arithmetic function
  |
1 - 3 + 7
1 + saturating_add(3, 7)
  |
1 - 3 + 7
1 + add(3, 7) or todo()
  |
